@@ -1,3 +1,8 @@
+2007-02-19  Daiki Ueno  <ueno@unixuser.org>
+
+	* mime-edit.el (mime-edit-sign-pgp-mime): Create a signature for
+	binary document.
+
 2006-12-02  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>
 
 	* mime-edit.el (mime-edit-process-multipart-1): Don't insert a
